[package]
name = "compro"
version = "0.1.0"
authors = ["Yohei Tamura <tamuhey@gmail.com>"]
edition = "2018"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
num = "0.3"

[dev-dependencies]

quickcheck = "^0.9.2"
quickcheck_macros = "^0.9.1"
